--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-organizational-chart": "^2.2.1",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,8 +47,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.4.17"
   }
 }
