--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docx": "^9.5.1",
     "dompurify": "^3.2.7",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
