--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-organizational-chart": "^2.2.1",
