--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--max-old-space-size=8192 PORT=3001 react-scripts start",
