--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--max-old-space-size=8192 PORT=3001 react-scripts start",
+    "start": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "start:3000": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts build",
     "test": "react-scripts test",
