--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "better-sqlite3": "^12.4.1",
     "d3": "^7.9.0",
     "docx": "^9.5.1",
     "dompurify": "^3.2.7",
