--- a/package.json
+++ b/package.json
@@ -7,6 +7,22 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-color": "^3.6.2",
+    "@tiptap/extension-font-family": "^3.6.2",
+    "@tiptap/extension-highlight": "^3.6.2",
+    "@tiptap/extension-image": "^3.6.2",
+    "@tiptap/extension-link": "^3.6.2",
+    "@tiptap/extension-placeholder": "^3.6.2",
+    "@tiptap/extension-table": "^3.6.2",
+    "@tiptap/extension-table-cell": "^3.6.2",
+    "@tiptap/extension-table-header": "^3.6.2",
+    "@tiptap/extension-table-row": "^3.6.2",
+    "@tiptap/extension-text-align": "^3.6.2",
+    "@tiptap/extension-text-style": "^3.6.2",
+    "@tiptap/extension-underline": "^3.6.2",
+    "@tiptap/pm": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
     "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
     "d3": "^7.9.0",
