--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-bubble-menu": "^3.6.2",
     "@tiptap/extension-color": "^3.6.2",
     "@tiptap/extension-font-family": "^3.6.2",
     "@tiptap/extension-highlight": "^3.6.2",
