--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
