--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "prestart": "node scripts/kill-port.js 3000",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "start:frontend": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "start:backend": "node server/server.js",
     "start:3000": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "kill-port": "node scripts/kill-port.js"
   },
   "eslintConfig": {
     "extends": [
