--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,6 +22,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+.venv/
+ENV/
+ml-service/venv/
+ml-service/.env
+ml-service/data/vector_db/
+ml-service/models/*.pth
+ml-service/models/*.json
 
 # Windows special files
 nul
