--- a/package.json
+++ b/package.json
@@ -45,13 +45,17 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "prestart": "node scripts/check-ports.js",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\" \"npm run start:ml\"",
     "start:frontend": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "start:backend": "node server/server.js",
+    "start:ml": "cd ml-service && venv\\Scripts\\python.exe api_ollama.py",
+    "start:ml:old": "cd ml-service && venv\\Scripts\\python.exe api.py",
     "start:3000": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "verify:ollama": "cd ml-service && venv\\Scripts\\python.exe verify_ollama.py"
   },
   "eslintConfig": {
     "extends": [
