aiprompt in helpcontant data

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ yarn-error.log*
 
 # Windows special files
 nul
+
+# ML Service temporary files
+/ml-service/*.log
+/ml-service/training_state.json
+/ml-service/runs/
+*.pth
