--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "marked": "^17.0.1",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
