--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -39,12 +40,14 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-focus-lock": "^2.13.6",
+    "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.2.1"
   },
   "scripts": {
     "prestart": "node scripts/check-ports.js",
