--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
     "d3": "^7.9.0",
+    "dagre": "^0.8.5",
     "docx": "^9.5.1",
     "dompurify": "^3.2.7",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
