--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.544.0",
     "marked": "^17.0.1",
     "papaparse": "^5.5.3",
