cde builder improvements

--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "zod": "^4.2.1"
   },
   "scripts": {
-    "prestart": "node scripts/check-ports.js",
+    "prestart": "node scripts/check-ports.js && node scripts/start-ollama.js",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\" \"npm run start:ml\"",
+    "start:ollama": "node scripts/start-ollama.js",
     "start:frontend": "cross-env NODE_OPTIONS=--max-old-space-size=8192 react-scripts start",
     "start:backend": "node server/server.js",
     "start:ml": "cd ml-service && venv\\Scripts\\python.exe api_ollama.py",
